# app.voenix.shop

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  TODO.md  build.gradle  docker-compose.yml  settings.gradle
.claude/: settings.local.json
backend-go/: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  (+2 more)
backend-python/: .gitignore  AGENTS.md  Dockerfile  pyproject.toml  pyrightconfig.json
backend-python/src/: database.py  main.py
backend-python/src/ai/: __init__.py  api.py  factories.py  gemini_generator.py  interfaces.py  schemas.py
backend-python/src/ai/_internal/: flux_generator.py  gemini_generator.py  gpt_generator.py  openai_generator.py
backend-python/src/auth/: __init__.py  api.py  schemas.py
backend-python/src/auth/_internal/: __init__.py  entities.py  session_service.py
backend-python/src/country/: __init__.py  api.py  schemas.py
backend-python/src/country/_internal/: entities.py
backend-python/src/image/: __init__.py  admin_api.py  api.py  converter.py  locations.py  storage.py  user_api.py
backend-python/src/image/_internal/: __init__.py  image_conversion_service.py  image_file_service.py  locations.py  sanitize_service.py  schemas.py  storage_service.py  upload_request_service.py  user_images_service.py
backend-python/src/prompt/: api.py  schemas.py
backend-python/src/prompt/_internal/: entities.py
backend-python/src/supplier/: api.py  schemas.py
backend-python/src/supplier/_internal/: entities.py
backend-python/src/vat/: __init__.py  api.py  schemas.py  vat_api.py  vat_entity.py
(+2116 files in other folders)
